# SokuLobbies

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  RunPrivateServer.bat  RunServer.bat
pkgs/: FindSFML.cmake
src/Common/: Exceptions.hpp  GuardedMutex.cpp  GuardedMutex.hpp  Packet.cpp  Packet.hpp  Socket.cpp  Socket.hpp  Utils.cpp  Utils.hpp  encodingConverter.cpp  encodingConverter.hpp  shiftJISConvTable.inl  shiftJISReverseConvTable.inl
src/MainServer/: main.cpp
src/Server/: Connection.cpp  Connection.hpp  Server.cpp  Server.hpp  main.cpp  slurs.txt
src/SokuMod/: AchievementsMenu.cpp  AchievementsMenu.hpp  BackgroundHost.cpp  Connection.cpp  Connection.hpp  InLobbyMenu.cpp  InLobbyMenu.hpp  InputBox.cpp  InputBox.hpp  LobbyData.cpp  LobbyData.hpp  LobbyMenu.cpp  LobbyMenu.hpp  Player.cpp  Player.hpp  SmallHostlist.cpp  SmallHostlist.hpp  SokuLobbies.ini  StatsMenu.cpp  StatsMenu.hpp  createUTFTexture.cpp  createUTFTexture.hpp  data.hpp  encodingConverter.cpp  encodingConverter.hpp  getPublicIp.cpp  getPublicIp.hpp  integration.hpp  ipv6map.cpp  ipv6map.h  ipv6map_extern.hpp  main.cpp  version.rc
src/SokuMod/assets/: ach_order.json  achievements.json  data.txt  generator.py  wordbanlist.txt
src/SokuMod/assets/accessories/: accessories infos.txt  accessories types.txt
src/SokuMod/assets/arcades/: list.json
src/SokuMod/assets/avatars/: CREDITS.txt  list.json  order.json
src/SokuMod/assets/backgrounds/: list.json
src/SokuMod/assets/elevators/: list.json
src/SokuMod/assets/emotes/: list.json
src/SokuMod/assets/flags/: list.json
src/SokuMod/assets/props/: props infos.txt
